--- a/framework/framework.vcxproj.filters
+++ b/framework/framework.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClInclude Include="graphicsPipeline.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="bufferFromArray.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
